[fix]:Section3 card problem on mobile 4th

--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ h2 {
     }
 
     .room-item {
-        width: 90%; /* 调整每个房间卡片的宽度为90%以适应小屏幕 */
+        width: 100%; /* 调整每个房间卡片的宽度为90%以适应小屏幕 */
         margin-bottom: 20px; /* 增加卡片间的间距 */
         max-width: 400px; /* 限制卡片最大宽度，避免在大屏幕设备上过宽 */
     }
